--- a/envious.css
+++ b/envious.css
@@ -9,13 +9,18 @@ html{
     -webkit-text-size-adjust: 100%;
     font-size: 12pt;
     cursor: cell;
+    height: -webkit-fill-available;
     
 }
 
 body {
+    display: flex;
+    flex-direction: column;
     margin: 0;
     line-height: 2;
     padding-left: 400px;
+    height: 100vh;
+    height: -webkit-fill-available;
 }
 
 pre {
