--- a/envious.css
+++ b/envious.css
@@ -10,6 +10,7 @@ html{
     font-size: 12pt;
     cursor: cell;
     height: -webkit-fill-available;
+    height: 100%;
     
 }
 
@@ -21,6 +22,7 @@ body {
     padding-left: 400px;
     height: 100vh;
     height: -webkit-fill-available;
+    height: 100%;
 }
 
 pre {
@@ -30,6 +32,7 @@ pre {
     line-height: 1;
     text-align: center;
     padding-right: 400px;
+    height: 100%;
 }
 
 a {
